baremetal games: make into section, too interesting

--- a/README.adoc
+++ b/README.adoc
@@ -2159,16 +2159,6 @@ This repository quotes by default the following revision: 325384-056US September
 
 Fun, educational and useless:
 
-* games
-** https://github.com/programble/bare-metal-tetris tested on Ubuntu 14.04. Just works.
-+
-Has Multiboot and El Torito. Uses custom linker script.
-+
-Almost entirely in C `-nostdlib`, with very few inline `asm` commands, and a small assembly entry point. So a good tutorial in how to do the bridge.
-** https://github.com/daniel-e/tetros Tetris that fits into bootloader.
-** https://github.com/nanochess/fbird Flappy bird in the 512-byte boot sector.
-** https://github.com/Overv/MineAssemble Minecraft
-** https://github.com/tsoding/pinpog Pong / Breakout
 * https://github.com/arjun024/mkeykernel, https://github.com/arjun024/mkernel
 +
 Worked, but bad build system: not `Makefile` or `.gitignore`.
@@ -2177,6 +2167,18 @@ The following did not work on my machine out of the box:
 
 * https://github.com/apparentlymart/ToyOS
 * https://github.com/rde1024/toyos
+
+==== Baremetal games
+
+* https://github.com/programble/bare-metal-tetris tested on Ubuntu 14.04. Just works.
++
+Has Multiboot and El Torito. Uses custom linker script.
++
+Almost entirely in C `-nostdlib`, with very few inline `asm` commands, and a small assembly entry point. So a good tutorial in how to do the bridge.
+* https://github.com/daniel-e/tetros Tetris that fits into bootloader.
+* https://github.com/nanochess/fbird Flappy bird in the 512-byte boot sector.
+* https://github.com/Overv/MineAssemble Minecraft
+* https://github.com/tsoding/pinpog Pong / Breakout
 
 === Tutorials
 
